--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div id="container">
         <canvas id="canvas1"></canvas>
         <div id ="audioContainer">
-            <audio id="audio1" src="Vanilla - origin.mp3" controls></audio>
             <div id="hideAudioButton" class="showHideButton fa-solid fa-angles-up">
             </div>
+            <audio id="audio1" src="Vanilla - origin.mp3" controls loop></audio>
         </div>
         <div id="hideMenuButton" class="showHideButton fa-solid fa-angles-left">
         </div>
@@ -36,10 +36,11 @@
                     <div class = "sidebarElement">
                         <label for="visualizers">Visualizer Type:</label>
                         <select name="visualizers" id="droplistVisualizers">
+                            <option value="horizontal bars">Horizontal Bars</option>
                             <option value="polygons">Polygons</option>
                             <option value="radial bars">Radial Bars</option>
                             <option value="radial bars log">Radial Bars (logarithmic)</option>
-                            <option value="horizontal bars">Horizontal Bars</option>
+
                             <option value="horizontal bars log">Horizontal Bars (logarithmic)</option>
                         </select>
                     </div>
@@ -72,7 +73,7 @@
                             <p>width Multiplier</p>
                             <span>
                                 <input id="widthMultiplier" type="range" min="0.001" max="50" value="2" step="0.001" data-field="widthMultiplier" />
-                                <input type="text" value="2" data-field="widthMultiplier" />
+                                <input id="widthMultiplierTextInput" type="text" value="2" data-field="widthMultiplier" />
                             </span>
                         </div>
                     </div>
@@ -80,8 +81,8 @@
                         <div class="slider">
                             <p>high freq Cutoff</p>
                             <span>
-                                <input id="highCutoff" type="range" type="range" min="0" max="0.999" value="0.3" step="0.001" data-field="highCutoff" />
-                                <input type="text" value="0.3" data-field="highCutoff" />
+                                <input id="highCutoff" type="range" type="range" min="0" max="0.999" value="0.25" step="0.001" data-field="highCutoff" />
+                                <input type="text" value="0.25" data-field="highCutoff" />
                             </span>
                         </div>
                     </div>
@@ -298,8 +299,8 @@
                         <div class="slider">
                             <p>alpha</p>
                             <span>
-                                <input id="alphaShadow" type="range" value="0.5" min="0" max="1" step="0.01" data-field="alphaShadow" />
-                                <input type="text" value="0.5" data-field="alphaShadow" />
+                                <input id="alphaShadow" type="range" value="0.2" min="0" max="1" step="0.01" data-field="alphaShadow" />
+                                <input type="text" value="0.2" data-field="alphaShadow" />
                             </span>
                         </div>
                     </div>
