--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="container">
         <canvas id="canvas1"></canvas>
         <div id ="audioContainer">
-            <div id="hideAudioButton" class="showHideButton fa-solid fa-angles-up">
+            <div id="hideAudioButton" class="showHideButton fa-solid fa-angles-down">
             </div>
             <audio id="audio1" src="Vanilla - origin.mp3" controls loop></audio>
         </div>
