--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <div id ="audioContainer">
             <div id="hideAudioButton" class="showHideButton fa-solid fa-angles-down">
             </div>
-            <audio id="audioPlayer" src="Vanilla - origin.mp3" controls loop></audio>
+            <!-- <audio id="audioPlayer" src="Vanilla - origin.mp3" controls loop></audio> -->
+            <audio id="audioPlayer" controls loop></audio>
         </div>
         <div id="hideMenuButton" class="showHideButton fa-solid fa-angles-left">
         </div>
