--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                         </select>
                     </div>
                     <div class = "sidebarElement">
-                        <label for="fftSizes" title="Bars amount = FFT size/2 (without cutoff) &#013;Computationally demanding!">FFT size:</label>
-                        <select name="fftSizes" id="droplistFftSizes" title="Bars amount = FFT size/2 (without cutoff) &#013;Computationally demanding!">
+                        <label for="fftSizes" title="Bars amount = FFT size/2 (without cutoff) &#013;Computationally expensive!">FFT size:</label>
+                        <select name="fftSizes" id="droplistFftSizes" title="Bars amount = FFT size/2 (without cutoff) &#013;Computationally expensive!">
                             <option value="32">32</option>
                             <option value="64">64</option>
                             <option value="128" selected="selected">128</option>
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <div class = "sidebarElement">
-                        <div class="slider" title="May be computationally demanding!">
+                        <div class="slider" title="May be computationally expensive!">
                             <p>width Multiplier</p>
                             <span>
                                 <input id="widthMultiplier" type="range" min="0.001" max="50" value="2" step="0.001" data-field="widthMultiplier" />
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                     <div class = "sidebarElement" id="polygonSymmetrySliderDiv">
-                        <div class="slider" title="Computationally demanding!">
+                        <div class="slider" title="Computationally expensive!">
                             <p>polygon Symmetry</p>
                             <span>
                                 <input id="polygonSymmetry" type="range" value="7" min="2" max="100" step="1" data-field="polygonSymmetry" />
