Removed ignored files from --cached
Git files management

Css change

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         <div id ="audioContainer">
             <div id="hideAudioButton" class="showHideButton fa-solid fa-angles-down">
             </div>
-            <audio id="audioPlayer" src="spell.wav" controls loop></audio>
-            <!-- <audio id="audioPlayer" controls loop></audio> -->
+            <!-- TEST FILE -->
+            <!-- <audio id="audioPlayer" src="spell.wav" controls loop></audio> -->
+            <audio id="audioPlayer" controls loop></audio>
         </div>
         <div id="hideMenuButton" class="showHideButton fa-solid fa-angles-left">
         </div>
