Loading settings from a droplist

--- a/index.html
+++ b/index.html
@@ -33,6 +33,25 @@
         <div class="sidebar">     
             <div class ="sidebarCategory" id="sidebarCategory1"> GENERAL
                 <div class="sidebarInsideCategoryElements" id="sidebarInsideCategoryElements1">
+
+                    <!-- ______________________________ SAVE AND LOAD ______________________________ -->
+                    <div class = "sidebarElement">
+                        <label for="settings">Load:</label>
+                        <select id="droplistLoad">
+                            <!-- <option value="horizontal bars">SZETTINGS</option> -->
+                        </select>
+
+                        <div class="saveLoadButton" id="loadButton"> LOAD
+                        </div>
+
+                        <input type="text" id="saveTextInput" />
+
+                        <div class="saveLoadButton" id="saveButton"> SAVE
+                        </div>
+
+                    </div>
+                    <!-- ______________________________ SAVE AND LOAD ______________________________ -->
+
                     <div class = "sidebarElement">
                         <input type = "file" id="fileupload" accept="audio/*"></input>
                     </div>
